pkg/networking/cilium/testdata/network_policy_workload_120.yaml
manifest
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-kube-system
  namespace: kube-system
spec:
  podSelector: {}
  ingress:
  - {}
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
---
